# frame-search

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docs.py  index.html  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  sync-closing-labels.yml  tests.yml
assets/: Combination-DR4iFoRS.js  ImageComparisonComponent-CphVTVoy.js  ImperativeModal-CmOSTULR.js  LazyAnyLanguageCodeMirror-PGusm5pp.js  RenderHTML-CUSvJfTV.js  _baseEach-Xz5DR2cc.js  _baseFlatten-8yEsQJi9.js  _baseMap-DMMHaI20.js  _basePickBy-W59-WIft.js  _baseSet-BlAtwuhp.js  _toKey-Di_xoXjD.js  activity-DP54Flp6.js  add-cell-with-ai-DsqPH829.js  add-missing-import-BJfCTctT.js  alert-CBA2m-3_.js  angular-ts-DZJeSlkT.js  any-language-editor-Q8wlHePA.js  architectureDiagram-W76B3OCA-vUz6S8Jp.js  arrow-left-CPrWJ5DO.js  asciiarmor-T_gIwVlY.js  asn1-DF3TNf1X.js  between-horizontal-start-T2r-KWkg.js  brainfuck-C7rjOLuu.js  bsl-BHBj3uHE.js  c-DQwQsyaP.js  c4Diagram-FPNF74CW-95nZQFzE.js  cell-link-D9FNaXGs.js  cells-B6jS0AIj.js  chart-no-axes-column-CQryi5Zm.js  chat-components-BLmXAcnM.js  chat-panel-Djb1YlXV.js  check-BUgsJwxM.js  chevron-right-WxQzIptp.js  chunk-3AY6CYHV-B46AUeLq.js  chunk-4KMFLZZN-ByJDCN5Q.js  chunk-ABZYJK2D-D-T6tPym.js  chunk-CXMOBAN2-CX9vAWIk.js  chunk-K7UQS3LO-wezGwVAP.js  chunk-S3R3BYOJ-uZNU-Kd7.js  chunk-T44TD3VJ-C-v8PEdO.js  (+143 more)
docs/: index.html
docs/assets/: CellStatus-D2Ps_WFf.js  Combination-DR4iFoRS.js  ConnectedDataExplorerComponent-1O-TNox2.js  apl-DLiZdQM7.js  (+378 more)
tests/: conftest.py  test_pandas.py  test_parse.py  test_polars.py  test_search.py
(+9 files in other folders)
