[project]
name = "frame-search"
version = "0.1.0"
description = "Query dataframes with GitHub search syntax"
readme = "README.md"
authors = [
    { name = "Will Dean", email = "wd60622@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "narwhals"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython",
    "marimo>=0.14.16",
    "pandas>=2.3.1",
    "polars>=1.32.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/frame_search",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--no-cov-on-fail",
    "--durations=50",
    "--color=yes",
]
